@@ -11,7 +11,7 @@ Description =
 	English = "GUI Library",
 }
 Author = "Baanano"
-Version = "0.4.6 r17"
+Version = "0.4.6 r18"
 Email = "baanano.rift@gmail.com"
 Environment = "2.1"
 Dependencies =
